--- a/library.html
+++ b/library.html
@@ -17,13 +17,13 @@
   <h1 class="text-3xl font-bold mb-4">Library</h1>
 
   <!-- Navigation Button -->
-  <div class="flex justify-end">
+  <div class="flex justify-end mb-6">
     <a href="index.html" class="btn">Go to Home</a>
   </div>
 
   <!-- Upload Section -->
   <div class="mb-6">
-    <label class="block mb-2 font-semibold">Upload Template / Block / Page / Theme / Subscription</label>
+    <label class="block mb-2 font-semibold">Upload Template / Block / Theme / Page / Subscription</label>
     <input type="file" id="fileInput" class="mb-4 border p-2" multiple>
     <progress id="uploadProgress" value="0" max="100" class="w-full mb-4"></progress>
     <button id="uploadBtn" class="btn">Upload</button>
@@ -34,9 +34,9 @@
 
   <!-- Thumbnail Editor Modal -->
   <div id="thumbModal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center">
-    <div class="bg-white p-4 rounded shadow-lg w-3/4 h-3/4">
+    <div class="bg-white p-4 rounded shadow-lg w-3/4 h-3/4 flex flex-col">
       <h2 class="text-xl font-bold mb-4">Edit Thumbnail</h2>
-      <div class="h-4/5">
+      <div class="flex-1 flex items-center justify-center">
         <img id="cropperImage" style="max-width:100%; max-height:100%; display:block; margin:auto;"/>
       </div>
       <div class="mt-4 flex justify-end gap-4">
@@ -63,26 +63,18 @@
       let currentEditingId = null;
       let cropper;
 
-      // --- Render Library (exclude templates) ---
+      // Render Library Sidebar
       function renderLibrary() {
         libraryGrid.innerHTML = '';
-
-        const categories = {
-          block: [],
-          page: [],
-          theme: [],
-          subscription: [],
-          asset: []
-        };
+        const categories = { template: [], block: [], page: [], theme: [], subscription: [], asset: [] };
 
         library.forEach((item, index) => {
-          if (item.type === 'template') return; // skip templates
-          if (!categories[item.type]) categories[item.type] = [];
-          categories[item.type].push({ ...item, index });
+          if(!categories[item.type]) categories[item.type] = [];
+          categories[item.type].push({...item, index});
         });
 
         Object.keys(categories).forEach(type => {
-          if (categories[type].length === 0) return;
+          if(categories[type].length===0) return;
 
           const title = document.createElement('h3');
           title.textContent = type.charAt(0).toUpperCase() + type.slice(1) + "s";
@@ -94,24 +86,26 @@
             const card = document.createElement('div');
             card.className = "border p-4 rounded shadow flex flex-col items-center";
 
+            // Thumbnail
             const img = document.createElement('img');
             img.src = item.thumbnail || 'https://via.placeholder.com/400x200?text=No+Thumbnail';
             img.className = "card-img mb-2";
             card.appendChild(img);
 
+            // Name
             const name = document.createElement('p');
             name.textContent = item.name;
             name.className = "font-semibold mb-2 text-center";
             card.appendChild(name);
 
-            // --- Upload / Edit Thumbnail ---
+            // Upload/Edit Thumbnail
             const thumbInput = document.createElement('input');
-            thumbInput.type = 'file';
-            thumbInput.accept = 'image/*';
-            thumbInput.className = 'hidden';
-            thumbInput.onchange = (e) => {
+            thumbInput.type='file';
+            thumbInput.accept='image/*';
+            thumbInput.className='hidden';
+            thumbInput.onchange = e => {
               const file = e.target.files[0];
-              if (!file) return;
+              if(!file) return;
               const reader = new FileReader();
               reader.onload = ev => {
                 library[index].thumbnail = ev.target.result;
@@ -121,25 +115,19 @@
               reader.readAsDataURL(file);
             };
 
-            const uploadBtn = document.createElement('button');
-            uploadBtn.textContent = item.thumbnail ? 'Change Thumbnail' : 'Upload Thumbnail';
-            uploadBtn.className = 'btn mb-2';
-            uploadBtn.onclick = () => thumbInput.click();
+            const uploadThumbBtn = document.createElement('button');
+            uploadThumbBtn.textContent = item.thumbnail ? 'Change Thumbnail' : 'Upload Thumbnail';
+            uploadThumbBtn.className = 'btn mb-2';
+            uploadThumbBtn.onclick = ()=> thumbInput.click();
+
             card.appendChild(thumbInput);
-            card.appendChild(uploadBtn);
+            card.appendChild(uploadThumbBtn);
 
-            // --- Cropper Edit ---
-            const editBtn = document.createElement('button');
-            editBtn.textContent = 'Edit via Cropper';
-            editBtn.className = 'btn mb-2';
-            editBtn.onclick = () => openThumbnailEditor(index);
-            card.appendChild(editBtn);
-
-            // --- Delete button ---
+            // Delete
             const deleteBtn = document.createElement('button');
             deleteBtn.textContent = 'Delete';
             deleteBtn.className = 'btn bg-red-600 hover:bg-red-700';
-            deleteBtn.onclick = () => {
+            deleteBtn.onclick = ()=>{
               if(confirm(`Are you sure you want to delete "${item.name}"?`)){
                 library.splice(index,1);
                 localStorage.setItem('sitegenLibrary', JSON.stringify(library));
@@ -153,41 +141,10 @@
         });
       }
 
-      // --- Cropper Editor ---
-      function openThumbnailEditor(index){
-        currentEditingId = index;
-        const item = library[index];
-        cropperImage.src = item.thumbnail || 'https://via.placeholder.com/800x400?text=Upload+Thumbnail';
-        thumbModal.classList.remove('hidden');
-
-        if(cropper) cropper.destroy();
-        cropper = new Cropper(cropperImage, {
-          aspectRatio: 16 / 9,
-          viewMode: 1,
-          dragMode: 'move',
-          autoCropArea: 1,
-        });
-      }
-
-      saveThumb.onclick = () => {
-        if(cropper && currentEditingId !== null){
-          const canvas = cropper.getCroppedCanvas({ width: 400, height: 200 });
-          library[currentEditingId].thumbnail = canvas.toDataURL();
-          localStorage.setItem('sitegenLibrary', JSON.stringify(library));
-          renderLibrary();
-        }
-        thumbModal.classList.add('hidden');
-      };
-
-      cancelThumb.onclick = () => {
-        thumbModal.classList.add('hidden');
-        if(cropper) cropper.destroy();
-      };
-
-      // --- File Upload + Auto Inject Templates ---
+      // Upload Templates/Blocks/etc
       uploadBtn.onclick = () => {
         const files = Array.from(fileInput.files);
-        if (!files.length) return;
+        if(!files.length) return;
 
         let uploaded = 0;
         files.forEach(file => {
@@ -200,31 +157,25 @@
             else if(file.name.endsWith('.sub')) type='subscription';
             else if(file.name.endsWith('.html')) type='page';
 
-            const item = {
-              name: file.name,
-              type,
-              content: e.target.result,
-              thumbnail: null
-            };
+            const item = { name:file.name, type, content:e.target.result, thumbnail:null };
 
-            if(type==='template' || type==='page'){
-              // --- inject templates/pages to index only ---
+            if(type==='template'){
+              // push to index page library only
               try {
                 let indexLibrary = JSON.parse(localStorage.getItem('sitegenIndexTemplates') || '[]');
                 indexLibrary.push(item);
                 localStorage.setItem('sitegenIndexTemplates', JSON.stringify(indexLibrary));
-              } catch(err){
-                console.error('Failed to inject template to index:', err);
-              }
+                console.log(`Template "${file.name}" sent to index page library`);
+              } catch(err){ console.error(err); }
             } else {
-              // --- save others to library sidebar ---
+              // push other files to sidebar library
               library.push(item);
             }
 
             uploaded++;
-            uploadProgress.value = (uploaded / files.length)*100;
+            uploadProgress.value = (uploaded/files.length)*100;
 
-            if(uploaded === files.length){
+            if(uploaded===files.length){
               localStorage.setItem('sitegenLibrary', JSON.stringify(library));
               renderLibrary();
             }
